# wren-tmdc

./: README.md
documents/: DATA_SOURCE_CONNECTIVITY_TRACE.md  LOCAL_DEVELOPMENT_GUIDE.md  WRENAI_SERVICE_COMPLETE_GUIDE.md  WREN_ENGINE_DETAILED_GUIDE.md  WREN_UI_PAGES_GUIDE.md
postman/: ibis-engine.json
wren-ai-service/: Justfile  pyproject.toml  requirements.txt  test.py
wren-ai-service/mds/: MCP_WRENAI_INTEGRATION_GUIDE.md  WRENAI_UV_SETUP_COMPLETE.md
wren-ai-service/postman/: collections.json
wren-ai-service/qdrant/: create_qdrant_collections.py  init_qdrant_collections.py
wren-ai-service/src/pipelines/generation/: intent_classification.py  semantics_description.py
wren-ai-service/src/providers/document_store/: qdrant.py
