[tool.poetry]
name = "wren-ai-service"
version = "0.25.17"
description = ""
authors = ["dev@getwren.ai"]
license = "AGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.*, <3.13"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
python-dotenv = "^1.2.1"
haystack-ai = "==2.18.1"
openai = "^2.16.0"
qdrant-haystack = "^9.1.2"
backoff = "^2.2.1"
tqdm = "^4.67.2"
numpy = "^2.4.2"
sqlparse = "^0.5.5"
orjson = "^3.11.7"
sf-hamilton = {version = "^1.89.0"}
aiohttp = {extras = ["speedups"], version = "^3.13.3"}
ollama-haystack = "^1.1.0"
langfuse = "^2.60.10"
ollama = "^0.6.1"
toml = "^0.10.2"
sqlglot = {extras = ["rs"], version = "^28.9.0"}
cachetools = "^5.5.0"
pyyaml = "^6.0.3"
pydantic-settings = "^2.12.0"
google-auth = "^2.48.0"
tiktoken = "^0.12.0"
jsonschema = "^4.26.0"
litellm = "^1.81.6"
boto3 = "^1.42.40"
qdrant-client = "==1.16.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
streamlit = "^1.53.1"
watchdog = "^6.0.0"
pandas = "^2.3.3"
matplotlib = "^3.10.8"
sseclient-py = "^1.9.0"
dspy-ai = "^3.1.2"
requests = "^2.32.5"
extra-streamlit-components = "^0.1.81"
deepeval = "^3.8.3"
tomlkit = "^0.14.0"
nltk = "^3.9.2"
psycopg2 = "^2.9.11"

[tool.poetry.group.eval.dependencies]
gitpython = "^3.1.46"
plotly = "^6.5.2"
nbformat = "^5.1.3"
ipykernel = "^7.1.0"
itables = "^2.6.2"
gdown = "^5.2.1"
streamlit-tags = "^1.2.8"
docker = "^7.1.0"

[tool.poetry.group.test.dependencies]
locust = "^2.43.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
aioresponses = "^0.7.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
